# key-value-storing

./: .gitignore  Cargo.toml  README.md
src/: akv_disk.rs  akv_mem.rs  lib.rs
